--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  
   <!-- Your own stylesheet -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -21,7 +23,7 @@
   <div class="container d-flex align-items-center h-100">
     <div class="row">
       <header class="text-center col-12">
-        <h1>The biggest startup of the year</h1>
+        <h1 class="animate__animated animate__fadeInBottomRight">The biggest startup of the year</h1>
       </header>
       <div class="buffer col-12"></div>
       <section class="text-center col-12">
